--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/server.js",
     "start": "node src/server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -16,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^6.5.0",
     "mongoose": "^7.3.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
